<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    	<RelativeLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
		<TextView android:id="@+id/title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/app_name"
		    style="@style/Text.Title.Giant" />
		
		<TextView android:id="@+id/version"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/title"
		    style="@style/Text.Larger" />
		
		<ImageView android:id="@+id/app_icon"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@id/title"
		    android:scaleType="fitEnd"
		    android:layout_marginLeft="10dip"
		    android:layout_alignParentTop="true"
		    android:layout_alignParentRight="true"
		    android:src="@drawable/large_icon"
		    android:padding="2dip"
		    android:adjustViewBounds="true"
		    android:contentDescription="@string/app_name"/>
		
		<TextView android:id="@+id/separator"
		    android:layout_below="@id/app_icon"
		    style="@style/hz_rule" />
		
		<TextView android:id="@+id/description"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/separator"
		    style="@style/Text.Larger"
		    android:text="@string/description" />
		
		<TextView android:id="@+id/copyleft_notice"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dip"
		    android:layout_below="@id/description"
		    style="@style/Text"/>
		
		<TextView android:id="@+id/separator2"
		    android:layout_below="@id/copyleft_notice"
		    style="@style/hz_rule" />
		
		<Button android:id="@+id/rating_bar"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/market_link"
		    android:layout_below="@id/separator2" />
		
		<TextView android:id="@+id/separator3"
		    android:layout_below="@id/rating_bar"
		    style="@style/hz_rule" />
		
		<Button android:id="@+id/get_source_code"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/get_source_code"
		    android:layout_below="@id/separator3" />

	</RelativeLayout>
	
</ScrollView>